[gd_scene load_steps=4 format=3 uid="uid://b81vt73tk73qe"]

[ext_resource type="Script" path="res://addons/gdUnit4/src/update/GdUnitUpdate.gd" id="1"]
[ext_resource type="Script" path="res://addons/gdUnit4/src/update/GdUnitUpdateClient.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://clcs87dmuogbm" path="res://addons/gdUnit4/src/update/assets/progress-background.png" id="9"]

[node name="Control" type="Window"]
disable_3d = true
position = Vector2i(128, 128)
size = Vector2i(800, 600)
visible = false
transient = true
always_on_top = true
popup_window = true
script = ExtResource("1")

[node name="UpdateProgress" type="Popup" parent="."]
exclusive = true

[node name="Progress" type="TextureRect" parent="UpdateProgress"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9")

[node name="bar" type="ProgressBar" parent="UpdateProgress/Progress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="label" type="Label" parent="UpdateProgress/Progress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="GdUnitUpdateClient" type="Node" parent="."]
script = ExtResource("8")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Panel/GridContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="header" type="Label" parent="Panel/GridContainer/PanelContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 26.0
size_flags_horizontal = 9
text = "A new version 'v4.0.0' is available"

[node name="PanelContainer2" type="PanelContainer" parent="Panel/GridContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 1152.0
offset_bottom = 613.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/GridContainer/PanelContainer2"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 583.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="content" type="RichTextLabel" parent="Panel/GridContainer/PanelContainer2/ScrollContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 583.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Panel" type="PanelContainer" parent="Panel/GridContainer"]
layout_mode = 2
offset_top = 617.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/GridContainer/Panel"]
use_parent_material = true
layout_mode = 2
offset_right = 1152.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="show_next" type="CheckBox" parent="Panel/GridContainer/Panel/HBoxContainer"]
layout_mode = 2
offset_right = 147.0
offset_bottom = 31.0
size_flags_horizontal = 0
text = "show next time"

[node name="update" type="Button" parent="Panel/GridContainer/Panel/HBoxContainer"]
layout_mode = 2
offset_left = 1023.0
offset_right = 1088.0
offset_bottom = 31.0
size_flags_horizontal = 10
text = "Update"

[node name="cancel" type="Button" parent="Panel/GridContainer/Panel/HBoxContainer"]
layout_mode = 2
offset_left = 1092.0
offset_right = 1152.0
offset_bottom = 31.0
size_flags_horizontal = 8
text = "Cancel"

[connection signal="meta_clicked" from="Panel/GridContainer/PanelContainer2/ScrollContainer/content" to="." method="_on_content_meta_clicked"]
[connection signal="meta_hover_ended" from="Panel/GridContainer/PanelContainer2/ScrollContainer/content" to="." method="_on_content_meta_hover_ended"]
[connection signal="meta_hover_started" from="Panel/GridContainer/PanelContainer2/ScrollContainer/content" to="." method="_on_content_meta_hover_started"]
[connection signal="toggled" from="Panel/GridContainer/Panel/HBoxContainer/show_next" to="." method="_on_show_next_toggled"]
[connection signal="pressed" from="Panel/GridContainer/Panel/HBoxContainer/update" to="." method="_on_update_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Panel/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
